# cfromreader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  CMakeSettings.json  Makefile  README.md  cfr.hpp  cfromreader.hpp  notes.md  setup.bat  test.cpp  test.cpp.back  test_old.cpp
binder/: binder.hpp  bnd3.hpp  stdafx.hpp
binder/bdf/: README.md  bdf.hpp  bdf3.hpp
binder/bhd/: README.md
binder/bhf/: README.md  bhf.hpp  bhf3.hpp
binder/bnd/: bnd.hpp  bnd3.hpp
binder/dcx/: README.md  dcx.hpp
binder/depricated/: binder.hpp
binders/: stdafx.hpp
binders/bhd/: bhd5_1.cpp
binders/bnd/: bnd3.cpp  bnd3.hpp
binders/dcx/: dcx.cpp  dcx.hpp
common/: stdafx.hpp
docs/setup/: building-on-windows.md
formats/: dcx.hpp  flver.hpp  stdafx.hpp
formats/depricated/: dcx.hpp  flver.hpp  flver2.hpp  iflver.hpp
formats/flver/: README.md  common.hpp  flver.cpp  flver.hpp  flver2.cpp  flver2.hpp  flver_structs.hpp  stdafx.hpp  vertex.hpp
formats/flver/flver2/: flver2.hpp  flver2_structs.hpp
formats/flver/temp/: flver2_structs.hpp
formats/havok/hkx/: hkx.cpp
formats/msb/: common.hpp
formats/paramdef/: paramdef.cpp
havok/: stdafx.hpp
havok/hka/: stdafx.hpp
havok/hkx/: hkx.hpp  stdafx.hpp
res/file_lists/: README.md
src/: CMakeLists.txt  cfromreader.cpp  cfromreader.hpp  main.cpp
src/binders/: stdafx.hpp
src/binders/bdf/: bdf3.hpp
src/binders/bhd/: bhd5_1.cpp  bhd5_1.hpp
src/binders/bnd/: bnd3.cpp  bnd3.hpp
src/binders/dcx/: dcx.cpp  dcx.hpp
src/common/: stdafx.hpp
src/formats/: stdafx.hpp
src/formats/flver/: flver2.cpp  flver2.hpp  flver2_structs.hpp
src/formats/flver/stash/: flver2.hpp  flver2_structs.hpp
src/formats/msb/: msb_com.hpp
src/test/: stdafx.hpp  test.cpp  test_tools.hpp
src/util/: filetypes.hpp  hash_util.cpp  hash_util.hpp  mem.cpp  mem.hpp  memreader.hpp  stdafx.hpp
src/util/compression/: zlib_inf.c  zlib_inf.h
src/util/fmemopen_win/: README.md  fmemopen_win.h
util/: cache.hpp  file_reader.hpp  file_types.hpp  filetypes.hpp  hash_util.cpp  hash_util.hpp  memr.cpp  memr.hpp  readutils.hpp  stdafx.hpp  util.hpp  utils.hpp  zlib_inf.cpp  zlib_inf.hpp
util/compression/: zlib_inf.cpp  zlib_inf.hpp  zlib_tool.hpp
util/files/: files.cpp  files.hpp
util/hashing/: hash_util.cpp  hash_util.hpp
util/memr/: memr.cpp  memr.hpp
util/strings/: strings.cpp  strings.h
util/vfs/: vfs.hpp
util/walker/: walker.hpp
